--- a/resume.editor/css/style.css
+++ b/resume.editor/css/style.css
@@ -5,19 +5,21 @@
 	box-sizing: border-box;
 }
 .hero{
-	height: 50vh;
+	height: 75vh;
 	width: 100%;
 	background-image: url(/Users/tonyclark/Desktop/resume.index/resume.editor/img/snow.png);
 	background-size: cover;
 	background-position: center;
+
 }
 nav{
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	padding-top: 45px;
-	padding-left: 8%;
-	padding-right: 8%;
+	padding-top: 25px;
+	padding-left: 90%;
+	padding-right: 10%;
+	
 }
 .logo{
 	color: rgb(0, 0, 0);
@@ -55,16 +57,31 @@ nav ul li a:hover{
 	padding: 10px 25px;
 	border-radius: 30px;
 	transition: transform .4s; 
+	text-align: center;
+	
 }
 .btn:hover{
 	transform: scale(1.2);
 }
 .content{
 	position: absolute;
-	top: 35%;
-	left:18%;
+	top: 60%;
+	right:10%;
 	transform: translateY(-50%);
 	font-family: 'Fredoka', sans-serif;
+}
+.content2{
+	top: 60%;
+	left:39%;
+	position: absolute;
+	transform: translateY(-50%);
+	
+}
+.content3{
+	top:60%;
+	left:10%;
+	position: absolute;
+	transform:translateY(-50%) ;
 }
 h1{
 	color: rgb(0, 0, 0);
