--- a/resume.editor/css/simpleGridTemplate.css
+++ b/resume.editor/css/simpleGridTemplate.css
@@ -1,7 +1,15 @@
 @charset "UTF-8";
 /* Body */
+
+ @font-face{
+	font-family: runescape;
+    src: url("fonts/RuneScape-Chat-07.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal; 
+}
+
 body {
-	font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
+	font-family: runescape;
 	background-color: #FFFFFF;
 	margin: 0;
 }
@@ -16,7 +24,7 @@ body {
 header {
 	width: 100%;
 	height: 8%;
-	background-color: #5D5E5D;
+	background-color: #0A2239;
 	border-bottom: 1px solid #353635;
 }
 .music { 
@@ -32,7 +40,7 @@ header {
 	text-align: center;
 	padding-top: 15px;
 	line-height: 2em;
-	font-size: 22px;
+	font-size: 40px;
 }
 .hero_header {
 	color: #FFFFFF;
@@ -55,7 +63,7 @@ header {
 	clear: both;
 	display: flex;
 	width: 100%;
-	background-color: #FFFFFF;
+	background-color: #1D84B5;
 	/* [disabled]min-width: 400px;
 */
 	padding-bottom: 35px;
@@ -68,7 +76,7 @@ header {
 	text-align: center;
 	float: center;
 	margin-top: 35px;
-	background-color: #F8F8F8;
+	background-color: #0A2239;
 	padding-bottom: 20px;
 	margin-left: 1%;
 	margin-right: 1%;
@@ -84,17 +92,20 @@ header {
 	text-align: left;
 	padding-left: 20px;
 	padding-right: 20px;
+	font-size: 20px;
+	text-align: center;
 }
 .gallery .thumbnail p {
 	margin: 0;
-	color: #B3B3B3;
-	text-align: left;
+	color: #52BAD5;
+	text-align: center;
 	padding-left: 20px;
 }
 /* More info */
 .intro {
-	background-color: #FFFFFF;
+	background-color: #53A2BE;
 	padding-bottom: 35px;
+	width: 100%;
 }
 .column {
 	width: 50%;
@@ -151,7 +162,7 @@ header {
 	padding-top: 1%;
 }
 .back .btn{
-	background-color:#f9004d;
+	background-color:#1D84B5;
 	color: white;
 	text-decoration: none;
 	border: 2px solid transparent;
@@ -186,7 +197,7 @@ header {
 	text-align: center;
 	padding-top: 20px;
 	padding-bottom: 20px;
-	background-color: #717070;
+	background-color: #1D84B5;
 	color: #FFFFFF;
 	text-transform: uppercase;
 	font-weight: lighter;
@@ -194,7 +205,7 @@ header {
 	border-top-width: 2px;
 }
 footer {
-	background-color: #B3B3B3;
+	background-color: #0A2239;
 	padding-top: 50px;
 	padding-bottom: 40PX;
 	position:relative;
@@ -227,16 +238,16 @@ footer {
 }
 .intro {
 	display: inline-block;
-	background-color: #6DC7D0;
+	background-color: #53A2BE;
 }
 .profile {
 	width: 50%;
 }
 .gallery .thumbnail .tag {
-	color: #5D5E5D;
+	color: #52BAD5;
 	padding-bottom: 4px;
 	padding-top: 4px;
-	text-align: left;
+	text-align: center;
 	padding-left: 20px;
 	padding-right: 20px;
 }
