--- a/resume.editor/css/simpleGridTemplate.css
+++ b/resume.editor/css/simpleGridTemplate.css
@@ -86,8 +86,8 @@ header {
 	display: flex;
 	width: 100%;
 	background-color: #1D84B5;
-	/* [disabled]min-width: 400px;
-*/
+/*	min-width: 400px; */
+
 	padding-bottom: 35px;
 	padding-top: 0px;
 	margin-top: -5px;
@@ -276,6 +276,9 @@ footer {
 
 /* Mobile */
 @media (max-width: 320px) {
+.gallery{
+		display: inline-grid;
+	}
 .logo {
 	width: 100%;
 	text-align: center;
@@ -284,6 +287,7 @@ footer {
 	margin-bottom: 0px;
 	margin-left: 0px;
 }
+
 .text_column {
 	width: 100%;
 	text-align: justify;
@@ -296,6 +300,7 @@ footer {
 .text_column {
 	padding-left: 20px;
 }
+
 .thumbnail {
 	width: 100%;
 }
@@ -313,6 +318,9 @@ footer {
 
 /* Small Tablets */
 @media (min-width: 321px)and (max-width: 767px) {
+.gallery{
+	display: inline-grid;
+}
 .logo {
 	width: 100%;
 	text-align: center;
@@ -321,6 +329,7 @@ footer {
 	margin-bottom: 0px;
 	margin-left: 0px;
 }
+
 .text_column {
 	width: 100%;
 	text-align: left;
@@ -358,11 +367,14 @@ footer {
 
 /* Small Desktops */
 @media (min-width : 407px ) and ( max-width : 1096px ){
+.gallery{
+		display: inline-grid;
+	}
 .text_column {
 	width: 100%;
 }
 .thumbnail {
-	width: 48%;
+	width: 100%;
 }
 .text_column {
 	width: 90%;
